--- a/config/services.yaml
+++ b/config/services.yaml
@@ -32,4 +32,4 @@ services:
 
     App\Command\ImportCsvCommand:
         tags:
-            - { name: 'console.command', command: 'app:import:specialities' }
+            - { name: 'console.command', command: 'app:import:specialites' }
