feat: ajout de la page principal (liste des specialites + filtre) + quelques fixs

--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -5,3 +5,10 @@ controllers:
 kernel:
     resource: ../../src/Kernel.php
     type: annotation
+
+home_fallback:
+    path: /
+    controller: App\Controller\MainController::index
+    defaults:
+        path: /specialites.vlabs
+        permanent: true
